--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="src/style.css" />
   <title>Hello| Nissi LXD</title>
 </head>
 
 <body>
   <header class="container">
     <nav>
-      <a href="#"><img src="./images/logo.png" alt="logo" /></a>
+      <a href="#"><img src="./src/images/logo.png" alt="logo" /></a>
       <ul>
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
@@ -32,7 +32,7 @@
       </section>
 
       <section class="right">
-        <img src="images/hero-illustration.svg" alt="Hero illustration" />
+        <img src="src/images/hero-illustration.svg" alt="Hero illustration" />
       </section>
     </div>
   </header>
