CHG. Adedd a few aesthetics

--- a/index.html
+++ b/index.html
@@ -10,31 +10,67 @@
 </head>
 
 <body>
-  <header class="container">
-    <nav>
-      <a href="#"><img src="./src/images/logo.png" alt="logo" /></a>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </nav>
 
-    <div class="hero">
-      <section class="hero-left">
-        <h1>Hi, I"m Nissi</h1>
+  <nav>
+    <a href="#"><img class="logo" src="./src/images/logo.png" alt="logo" /></a>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
+  <main>
+
+    <section class="hero">
+
+      <div class="hero-section left">
+        <h1>Hi, I'm Nissi</h1>
         <p>
           I design learning experiences through storytelling and design for highly techically inclined subjects.
         </p>
 
-        <a href="#">Get To Know Me</a>
-      </section>
+        <a class="button" href="#">Get To Know Me</a>
+      </div>
 
-      <section class="right">
-        <img src="src/images/hero-illustration.svg" alt="Hero illustration" />
-      </section>
-    </div>
-  </header>
+      <div class="hero-section right">
+        <img class="hero-image" src="src/images/id-placeholder.jpeg" alt="Hero illustration" />
+      </div>
+
+    </section>    
+
+    <section class="project">
+
+      <h1>Featured Project</h1>
+
+      <p><strong></strong></p>
+
+      <p></p>
+
+      <a href="" class="button">Learn more</a>
+
+
+    </section>
+
+
+    <section class="connect">
+      <p><strong>Have an interesting project or looking to collaborate?</strong></p>
+      <a href="#" class="button">Get In Touch</a>
+    </section>
+
+  </main>
+
+  <footer>
+    <a href="#"><img class="logo" src="./src/images/logo.png" alt="logo" /></a>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </footer>
+
+
 </body>
 </html>
