CHG. Edited home page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- By Hassan Ali | Hassanrao.com -->
 
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="src/style.css" />
-  <title>Hello| Nissi LXD</title>
+  <title>Hello | Nissi LXD</title>
 </head>
 
 <body>
@@ -14,10 +13,10 @@
   <nav>
     <a href="#"><img class="logo" src="./src/images/logo.png" alt="logo" /></a>
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
@@ -31,7 +30,7 @@
           I design learning experiences through storytelling and design for highly techically inclined subjects.
         </p>
 
-        <a class="button" href="#">Get To Know Me</a>
+        <a class="button" href="about.html">Get To Know Me</a>
       </div>
 
       <div class="hero-section right">
@@ -42,13 +41,13 @@
 
     <section class="project">
 
-      <h1>Featured Project</h1>
+      <h1>Featured Project: The Better Service Strategy</h1>
 
-      <p><strong></strong></p>
+      <p><strong>Do you have the service that matches the occassion?</strong></p>
 
-      <p></p>
+      <p>This scenario-based eLearning concept project is designed to help cafe and restaurant serving staff (waiters and waitresses) give customers the best service.</p>
 
-      <a href="" class="button">Learn more</a>
+      <a href="/portfolio/better-service.html" class="button">Learn more</a>
 
 
     </section>
@@ -56,7 +55,7 @@
 
     <section class="connect">
       <p><strong>Have an interesting project or looking to collaborate?</strong></p>
-      <a href="#" class="button">Get In Touch</a>
+      <a href="contact.html" class="button">Get In Touch</a>
     </section>
 
   </main>
@@ -64,10 +63,10 @@
   <footer>
     <a href="#"><img class="logo" src="./src/images/logo.png" alt="logo" /></a>
     <ul>
-      <li><a href="#">Home</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Portfolio</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="portfolio.html">Portfolio</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </footer>
 
