CHG. Edit of path to featured project

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
       <p>This scenario-based eLearning concept project is designed to help cafe and restaurant serving staff (waiters and waitresses) give customers the best service.</p>
 
-      <a href="/portfolio/better-service.html" class="button">Learn more</a>
+      <a href="./portfolio/better-service.html" class="button">Learn more</a>
 
 
     </section>
