--- a/portfolio-better-service.html
+++ b/portfolio-better-service.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Better Service Strategy | Portfolio</title>
-    <link rel="stylesheet" href="../src/style.css" />
+    <link rel="stylesheet" href="./src/style.css" />
 </head>
 <body>
     <nav>
-        <a href="#"><img class="logo" src="../src/images/logo.png" alt="logo" /></a>
+        <a href="#"><img class="logo" src="./src/images/logo.png" alt="logo" /></a>
         <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../about.html">About</a></li>
-            <li><a href="../portfolio.html">Portfolio</a></li>
-            <li><a href="../contact.html">Contact</a></li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./about.html">About</a></li>
+            <li><a href="./portfolio.html">Portfolio</a></li>
+            <li><a href="./contact.html">Contact</a></li>
         </ul>
     </nav>    
     
