CHG. Added feature project and contact page

--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | Nissi LXD</title>
     <link rel="stylesheet" href="./src/style.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
 </head>
 <body>
     <nav>
@@ -15,11 +16,45 @@
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a class="active" href="contact.html">Contact</a></li>
         </ul>
-    </nav>    
-    
-    <main>
-        <h1>Get In Touch</h1>
-    </main>
+    </nav>
+
+    <h1>Get In Touch</h1>
+
+    <div>
+        
+        <form id="contact-form" class="column">
+
+            <h2>Prefer to send a message? <br> Fill in the form below</h2>
+
+            <label for="username">Your Name</label>
+            <p id="nameErr" class="errtxt"></p>
+            <input type="text" name="username" id="username" placeholder="e.g. John Doe">
+
+            <label for="mailaddr">Your Email</label>
+            <p id="emailErr" class="errtxt"></p>
+            <input type="email" name="mailaddr" id="mailaddr" placeholder="user@email.com">
+
+            <label for="subject">Subject</label>
+            <p id="subjErr" class="errtxt"></p>
+            <input type="text" name="subject" id="subject" placeholder="Your main topic here...">
+
+            <label for="mailbody">Your Message</label>
+            <textarea name="mailbody" id="mailbody" cols="30" rows="5" placeholder="Your message here..."></textarea>
+
+            <input type="submit" value="Submit">
+
+            <h2>Get Social</h2>
+
+            <div class="social-wrap row">
+                <a href="https://twitter.com/NissiKazembe"><i class="fab fa-twitter cpico"></i></a>
+                <a href="https://www.linkedin.com/in/nissi-kazembe-394692117/"><i class="fab fa-linkedin cpico"></i></a>
+            </div>            
+
+        </form> 
+
+
+
+    </div>
 
     <footer>
         <a href="#"><img class="logo" src="./src/images/logo.png" alt="logo" /></a>
