CHG. Fixed navbar, footer and general styling

--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
 <body>
 
   <nav>
-    <a href="#"><img class="logo" src="./src/images/logo.png" alt="logo" /></a>
-    <ul>
-      <li><a class="active" href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="contact.html">Contact</a></li>
+    <div class="nav-item">
+        <a href="#"> 
+            <img class="logo" src="./src/images/logo.png" alt="logo" />
+        </a>
+    </div>
+
+    <ul class="nav-item">
+        <li><a class="active" href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="portfolio.html">Portfolio</a></li>
+        <li><a href="contact.html">Contact</a></li>
     </ul>
-  </nav>
+  </nav>  
 
   <main>
 
@@ -34,10 +39,10 @@
       </div>
 
       <div class="hero-section right">
-        <img class="hero-image" src="src/images/id-placeholder.jpeg" alt="Hero illustration" />
+        <img class="hero-image" src="src/images/id-main.jpg" alt="Hero illustration" />
       </div>
 
-    </section>    
+    </section>
 
     <section class="project">
 
@@ -61,8 +66,12 @@
   </main>
 
   <footer>
-    <a href="#"><img class="logo" src="./src/images/logo.png" alt="logo" /></a>
-    <ul>
+    <div class="nav-item">
+        <a href="#"> 
+            <img class="logo" src="./src/images/logo.png" alt="logo" />
+        </a>
+    </div>
+    <ul class="nav-item">
       <li><a class="active" href="index.html">Home</a></li>
       <li><a href="about.html">About</a></li>
       <li><a href="portfolio.html">Portfolio</a></li>
