--- a/about.html
+++ b/about.html
@@ -8,8 +8,13 @@
 </head>
 <body>
     <nav>
-        <a href="#"><img class="logo" src="./src/images/logo.png" alt="logo" /></a>
-        <ul>
+        <div class="nav-item">
+            <a href="#"> 
+                <img class="logo" src="./src/images/logo.png" alt="logo" />
+            </a>
+        </div>
+    
+        <ul class="nav-item">
             <li><a href="index.html">Home</a></li>
             <li><a class="active" href="about.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
@@ -22,12 +27,17 @@
     </main>
 
     <footer>
-        <a href="#"><img class="logo" src="./src/images/logo.png" alt="logo" /></a>
-        <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a class="active" href="about.html">About</a></li>
-          <li><a href="portfolio.html">Portfolio</a></li>
-          <li><a href="contact.html">Contact</a></li>
+        <div class="nav-item">
+            <a href="#"> 
+                <img class="logo" src="./src/images/logo.png" alt="logo" />
+            </a>
+        </div>
+    
+        <ul class="nav-item">
+            <li><a href="index.html">Home</a></li>
+            <li><a class="active" href="about.html">About</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </footer>
 
