CHG. Added digital artifact

--- a/portfolio-better-service.html
+++ b/portfolio-better-service.html
@@ -26,7 +26,9 @@
 
     <section>
         <div class="media-view">
-            Project preview
+            <video  width="320" height="240" controls="controls" preload="metadata">
+                <source src="https://lumi-tmp.s3.fr-par.scw.cloud/export/65a61883f90fccbad6980d4e.html" type="video/mp4">
+            </video>
         </div>
 
         <h2>Write Up</h2>
