--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,11 @@
     
     <main>
         <h1>Portfolio</h1>
+
+        <div class="portfolio-grid">
+            
+        </div>
+
     </main>
 
     <footer>
