CHG. Edit preview link for artifact

--- a/portfolio-better-service.html
+++ b/portfolio-better-service.html
@@ -26,9 +26,8 @@
 
     <section>
         <div class="media-view">
-            <video  width="320" height="240" controls="controls" preload="metadata">
-                <source src="https://lumi-tmp.s3.fr-par.scw.cloud/export/65a61883f90fccbad6980d4e.html" type="video/mp4">
-            </video>
+            <iframe src="https://lumi-tmp.s3.fr-par.scw.cloud/export/65a61883f90fccbad6980d4e.html" width="100%" height="480" style="border:1px solid black;">
+            </iframe>
         </div>
 
         <h2>Write Up</h2>
