--- a/portfolio-better-service.html
+++ b/portfolio-better-service.html
@@ -26,8 +26,9 @@
 
     <section>
         <div class="media-view">
-            <iframe src="https://lumi-tmp.s3.fr-par.scw.cloud/export/65a61883f90fccbad6980d4e.html" width="100%" height="480" style="border:1px solid black;">
-            </iframe>
+            <a href="https://lumi-tmp.s3.fr-par.scw.cloud/export/65a61883f90fccbad6980d4e.html" target="_blank"> <!-- target _blank opens in new tab-->
+                <img src="./src/images/portfolio-placeholder.png" width="300" height="240">
+            </a>
         </div>
 
         <h2>Write Up</h2>
