CHG. Added styling for responsive placeholder

--- a/portfolio-better-service.html
+++ b/portfolio-better-service.html
@@ -25,9 +25,10 @@
     <h1 class="portfolio-project-header">Better Service Strategy</h1>
 
     <section>
-        <div class="media-view">
-            <a href="https://lumi-tmp.s3.fr-par.scw.cloud/export/65a61883f90fccbad6980d4e.html" target="_blank"> <!-- target _blank opens in new tab-->
-                <img src="./src/images/portfolio-placeholder.png" width="300" height="240">
+        
+        <div class=" wrapper media-view">
+            <a href="https://lumi-tmp.s3.fr-par.scw.cloud/export/65a61883f90fccbad6980d4e.html" target="_blank">
+                <img class="media-image-placeholder" src="./src/images/portfolio-placeholder.png">
             </a>
         </div>
 
