CHG. Added serious game design

--- a/about.html
+++ b/about.html
@@ -19,11 +19,16 @@
             <li><a class="active" href="about.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="learn-in-games.html">Learn In Games</a></li>
         </ul>
     </nav>    
     
     <main>
+        
         <h1>Who Is Nissi</h1>
+
+        <p>Dedicated to the practice of continuous learning, I am often consuming knowledge. Research, Experimentation, Optimization and Evaluation</p>
+
     </main>
 
     <footer>
@@ -38,6 +43,7 @@
             <li><a class="active" href="about.html">About</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="contact.html">Contact</a></li>
+            <li><a href="learn-in-games.html">Learn In Games</a></li>
         </ul>
     </footer>
 
