--- a/portfolio.html
+++ b/portfolio.html
@@ -26,7 +26,13 @@
         <h1>Portfolio</h1>
 
         <div class="portfolio-grid">
-            
+
+            <div class="vert-padding">
+                <h1>See the Bug: The Protoype</h1>
+                <p>A game based learning experience</p>
+                <li></li><a href="LED Repair Adventure_ A Programming Journey.html">Try Out The Game Prototype</a></li>              
+            </div>
+
         </div>
 
     </main>
